1.20.4 NeoForge!
Still a lot to do, but this compiles and starts up.
And some things even work.