@@ -1,12 +1,12 @@
 package me.desht.pneumaticcraft.client.render.fluid;
 
-import com.google.common.collect.ImmutableList;
 import me.desht.pneumaticcraft.common.block.entity.AdvancedLiquidCompressorBlockEntity;
 import net.minecraft.client.renderer.blockentity.BlockEntityRendererProvider;
 import net.minecraft.core.Direction;
 import net.minecraft.world.phys.AABB;
 
 import java.util.Collection;
+import java.util.List;
 
 public class RenderAdvancedLiquidCompressor extends AbstractFluidTER<AdvancedLiquidCompressorBlockEntity> {
     private static final AABB TANK_BOUNDS = new AABB(0.1/16f, 11.1/16f, 0.1/16f, 15.9/16f, 15.9/16f, 15.9/16f);
@@ -17,6 +17,6 @@ public class RenderAdvancedLiquidCompressor extends AbstractFluidTER<AdvancedLiq
 
     @Override
     Collection<TankRenderInfo> getTanksToRender(AdvancedLiquidCompressorBlockEntity te) {
-        return ImmutableList.of(new TankRenderInfo(te.getTank(), TANK_BOUNDS).without(Direction.DOWN));
+        return List.of(new TankRenderInfo(te.getTank(), TANK_BOUNDS).without(Direction.DOWN));
     }
 }
