@@ -19,13 +19,13 @@ package me.desht.pneumaticcraft.client.render.fluid;
 
 import me.desht.pneumaticcraft.common.block.AbstractPneumaticCraftBlock;
 import me.desht.pneumaticcraft.common.block.entity.AbstractFluidTankBlockEntity;
+import me.desht.pneumaticcraft.common.util.IOHelper;
 import net.minecraft.client.renderer.blockentity.BlockEntityRendererProvider;
 import net.minecraft.core.Direction;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.phys.AABB;
-import net.minecraftforge.common.capabilities.ForgeCapabilities;
-import net.minecraftforge.fluids.IFluidTank;
-import net.minecraftforge.fluids.capability.IFluidHandler;
+import net.neoforged.neoforge.fluids.IFluidTank;
+import net.neoforged.neoforge.fluids.capability.IFluidHandler;
 
 import java.util.Collection;
 import java.util.Collections;
@@ -60,8 +60,8 @@ public class RenderFluidTank extends AbstractFluidTER<AbstractFluidTankBlockEnti
     public static class ItemRenderInfoProvider implements IFluidItemRenderInfoProvider {
         @Override
         public List<TankRenderInfo> getTanksToRender(ItemStack stack) {
-            IFluidHandler h = stack.getCapability(ForgeCapabilities.FLUID_HANDLER_ITEM).orElseThrow(RuntimeException::new);
-            return Collections.singletonList(new TankRenderInfo(h.getFluidInTank(0), h.getTankCapacity(0), BOUNDS_NONE));
+            IFluidHandler h = IOHelper.getFluidHandlerForItem(stack).orElseThrow(RuntimeException::new);
+            return List.of(new TankRenderInfo(h.getFluidInTank(0), h.getTankCapacity(0), BOUNDS_NONE));
         }
     }
 
