@@ -1,14 +1,14 @@
 package me.desht.pneumaticcraft.client.render.fluid;
 
-import com.google.common.collect.ImmutableList;
-import me.desht.pneumaticcraft.common.block.entity.ThermopneumaticProcessingPlantBlockEntity;
+import me.desht.pneumaticcraft.common.block.entity.ThermoPlantBlockEntity;
 import net.minecraft.client.renderer.blockentity.BlockEntityRendererProvider;
 import net.minecraft.core.Direction;
 import net.minecraft.world.phys.AABB;
 
 import java.util.Collection;
+import java.util.List;
 
-public class RenderThermopneumaticProcessingPlant extends AbstractFluidTER<ThermopneumaticProcessingPlantBlockEntity> {
+public class RenderThermopneumaticProcessingPlant extends AbstractFluidTER<ThermoPlantBlockEntity> {
     private static final AABB TANK_BOUNDS_1 = new AABB(9.1 / 16f, 1 / 16f, 0.1 / 16f, 15.9 / 16f, 11.9 / 16f, 4.9 / 16f);
     private static final AABB TANK_BOUNDS_2 = new AABB(0.1 / 16f, 1 / 16f, 0.1 / 16f, 6.9 / 16f, 11.9 / 16f, 4.9 / 16f);
 
@@ -32,8 +32,8 @@ public class RenderThermopneumaticProcessingPlant extends AbstractFluidTER<Therm
     }
 
     @Override
-    Collection<TankRenderInfo> getTanksToRender(ThermopneumaticProcessingPlantBlockEntity te) {
-        return ImmutableList.of(
+    Collection<TankRenderInfo> getTanksToRender(ThermoPlantBlockEntity te) {
+        return List.of(
                 new TankRenderInfo(te.getInputTank(), BOUNDS_IN[te.getRotation().get2DDataValue()]).without(Direction.DOWN),
                 new TankRenderInfo(te.getOutputTank(), BOUNDS_OUT[te.getRotation().get2DDataValue()]).without(Direction.DOWN)
         );
