@@ -20,9 +20,9 @@ package me.desht.pneumaticcraft.common.block.entity;
 import me.desht.pneumaticcraft.client.render.area.AreaRenderManager;
 import net.minecraft.core.BlockPos;
 import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.world.level.levelgen.structure.BoundingBox;
 import net.minecraft.world.phys.AABB;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.function.Supplier;
@@ -32,18 +32,18 @@ public class RangeManager {
     private final int renderColour;
     private int range = 0;
     private boolean showRange = false;
-    private AABB extents;
-    private Supplier<AABB> extentsGenerator;
+    private BoundingBox extents;
+    private Supplier<BoundingBox> extentsGenerator;
     private Set<BlockPos> frame;  // for rendering
 
     public RangeManager(BlockEntity te, int renderColour) {
         this.te = te;
         this.renderColour = renderColour;
-        this.extentsGenerator = () -> new AABB(te.getBlockPos(), te.getBlockPos()).inflate(range);
+        this.extentsGenerator = () -> new BoundingBox(te.getBlockPos()).inflatedBy(range);
         this.setRange(1);
     }
 
-    public RangeManager withCustomExtents(Supplier<AABB> generator) {
+    public RangeManager withCustomExtents(Supplier<BoundingBox> generator) {
         this.extentsGenerator = generator;
         return this;
     }
@@ -56,7 +56,7 @@ public class RangeManager {
         if (newRange != range) {
             range = newRange;
             this.extents = extentsGenerator.get();
-            this.frame = te.getLevel() != null && te.getLevel().isClientSide() ? getFrame(extents) : Collections.emptySet();
+            this.frame = te.getLevel() != null && te.getLevel().isClientSide() ? getFrame(extents) : Set.of();
             if (shouldShowRange() && te.getLevel() != null && te.getLevel().isClientSide()) {
                 toggleShowRange();
                 toggleShowRange();
@@ -79,18 +79,26 @@ public class RangeManager {
         return showRange;
     }
 
-    public AABB getExtents() {
+    public BoundingBox getExtents() {
         return extents;
     }
 
-    public static Set<BlockPos> getFrame(AABB extents) {
+    public AABB getExtentsAsAABB() {
+        return new AABB(extents.minX(), extents.minY(), extents.minZ(), extents.maxX(), extents.maxY(), extents.maxZ());
+    }
+
+    public static Set<BlockPos> getFrame(BlockPos pos, int range) {
+        return getFrame(new BoundingBox(pos).inflatedBy(range));
+    }
+
+    public static Set<BlockPos> getFrame(BoundingBox extents) {
         Set<BlockPos> res = new HashSet<>();
-        int minX = (int) extents.minX;
-        int minY = (int) extents.minY;
-        int minZ = (int) extents.minZ;
-        int maxX = (int) extents.maxX;
-        int maxY = (int) extents.maxY;
-        int maxZ = (int) extents.maxZ;
+        int minX = extents.minX();
+        int minY = extents.minY();
+        int minZ = extents.minZ();
+        int maxX = extents.maxX();
+        int maxY = extents.maxY();
+        int maxZ = extents.maxZ();
         for (int x = minX; x <= maxX; x++) {
             for (int y = Math.max(0, minY); y <= maxY && y < 256; y++) {
                 for (int z = minZ; z <= maxZ; z++) {
