@@ -23,19 +23,19 @@ import com.google.common.collect.ImmutableSet;
 import it.unimi.dsi.fastutil.ints.IntCollection;
 import it.unimi.dsi.fastutil.ints.IntList;
 import me.desht.pneumaticcraft.common.config.ConfigHelper;
-import me.desht.pneumaticcraft.common.core.ModRecipeSerializers;
+import me.desht.pneumaticcraft.common.registry.ModRecipeSerializers;
 import me.desht.pneumaticcraft.common.util.PneumaticCraftUtils;
 import net.minecraft.core.NonNullList;
-import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
+import net.minecraft.world.item.crafting.CraftingBookCategory;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.item.enchantment.Enchantment;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.item.enchantment.Enchantments;
-import net.minecraftforge.items.IItemHandler;
+import net.neoforged.neoforge.items.IItemHandler;
 
 import javax.annotation.Nonnull;
 import java.util.*;
@@ -46,8 +46,8 @@ import static me.desht.pneumaticcraft.api.PneumaticRegistry.RL;
 public class PressureDisenchantingRecipe extends PressureChamberRecipeImpl {
     public static final ResourceLocation ID = RL("pressure_chamber_disenchanting");
 
-    public PressureDisenchantingRecipe(ResourceLocation id) {
-        super(id, Collections.emptyList(), -0.75f);
+    public PressureDisenchantingRecipe(CraftingBookCategory category) {
+        super(Collections.emptyList(), -0.75f, List.of());
     }
 
     @Override
@@ -141,10 +141,6 @@ public class PressureDisenchantingRecipe extends PressureChamberRecipeImpl {
             case "out1" -> "pneumaticcraft.gui.nei.tooltip.vacuumEnchantBookOut";
             default -> "";
         };
-    }
-
-    @Override
-    public void write(FriendlyByteBuf buffer) {
     }
 
     @Override
